1. Update README.md  2. Add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 LCNavigationControllerDemo.xcodeproj/project.xcworkspace/xcuserdata/Leo.xcuserdatad/UserInterfaceState.xcuserstate
+
+LCNavigationControllerDemo.xcodeproj/project.xcworkspace/xcuserdata/newuser.xcuserdatad/UserInterfaceState.xcuserstate
